--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.ts"
+    "test": "jest",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,12 +20,18 @@
   },
   "dependencies": {
     "@prisma/client": "^4.9.0",
+    "@types/jest": "^29.4.0",
+    "@types/supertest": "^2.0.12",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.3",
+    "jest": "^29.4.3",
     "jsonwebtoken": "^9.0.0",
-    "morgan": "^1.10.0"
+    "lodash.merge": "^4.6.2",
+    "morgan": "^1.10.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5"
   }
 }
